<resources>
    <string name="app_name">Paulina_Stal_czw_9_30</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_all_clear">C</string>
    <string name="_percent">%</string>
    <string name="_root">√</string>
    <string name="_divide">÷</string>
    <string name="_multiply">×</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_equal">=</string>
    <string name="_dot">.</string>
</resources>